@@ -96,6 +96,7 @@ importFrom(graphics,plot)
 useDynLib(robsurvey)
 useDynLib(robsurvey,huberm)
 useDynLib(robsurvey,rwlslm)
+useDynLib(robsurvey,wlslm)
 useDynLib(robsurvey,wquantile)
 useDynLib(robsurvey,wtrimmedmean)
 useDynLib(robsurvey,wwinsorizedmean)
