@@ -2,8 +2,8 @@
 #include "wquantile.h"
 #include "constants.h"
 
-#ifndef _HUBERM_H
-#define _HUBERM_H
+#ifndef _HUBER2_H
+#define _HUBER2_H
 void huberm(double* restrict, double* restrict, double* restrict, double*,
     double*, double*, int*, int*, const double*, int*, int*);
 #endif
